# codex-code-permissions-hook

./: .gitignore  Brewfile  Cargo.toml  README.md  codex-code-permissions-hook.toml  config.toml.example  config_test.sh  example.toml  improve_prompt.txt  rotate_logs.sh  update_rust.sh
config/: codex_claude_policy_patch.json
docs/: CHANGELOG-2026-05a.md  CHANGELOG-2026-05b.md  CHANGELOG.md  CODEX_HOOK_USAGE_GUIDE.md  CODE_ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEVELOPMENT.md  FILE_FORMATS.md  FILE_STRUCTURE.md  INSTALL.md  NEWS.md  RELATED_PROJECTS.md  RELEASE_HISTORY.md  REPO_STYLE.md  TOOL_INPUT_SCHEMAS.md  TROUBLESHOOTING.md  USAGE.md  WORKTREE_POLICY.md  codex-hook-guide.md
src/: auditing.rs  config.rs  decomposer.rs  hook_io.rs  lib.rs  main.rs  matcher.rs  path_check.rs
tests/: README.md  command_decisions.tsv  integration_test.rs  test_config.toml  test_protected_branch.rs  test_protected_branch_config.toml  test_toml_parse.py  test_usage_guide_size.py
tools/: check_plan_mode_enforcement.py  diff_permission_configs.py  run_command_decisions.py
