[package]
name = "codex-code-permissions-hook"
version = "26.5.0"
edition = "2024"
authors = ["Neil Voss <https://bsky.app/profile/neilvosslab.bsky.social>", "Korny Sietsma <korny@sietsma.com>"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
regex = "1.12.2"
nix = { version = "0.30.1", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
brush-parser = "0.3"
[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3"
